--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -4351,6 +4351,8 @@ ${waypointsYamlStr}
                     return;
                 }
 
+                let newPathId = null;
+
                 if (existingPath) {
                     console.log("Reverse Path가 이미 존재합니다. 기존 Path를 전송합니다.");
                     const pathData = {
@@ -4358,8 +4360,8 @@ ${waypointsYamlStr}
                         args: {
                             command: "path",
                             connection_id: connectionId,
-                            robot_id: robotDbId,
-                            path_id: pathId,
+                            robot_id: selectedRobotId,
+                            path_id: newpathId,
                             waypoint_id: -1,
                             type: commandType,
                             request_id: requestId, // request_id 추가
@@ -4369,71 +4371,77 @@ ${waypointsYamlStr}
                     console.log("전송할 Reverse Path WebSocket 데이터:", JSON.stringify(pathData, null, 2));
                     socket.send(JSON.stringify(pathData));
                     return;
+                } else{
+
+                    // Reverse Waypoints 처리
+                    const reversedWaypoints = [...waypoints] // 원본 배열을 복사
+                        .reverse() // 복사된 배열을 반대로 정렬
+                        .map(wp => ({
+                            ...wp,
+                            yaw: (wp.yaw + Math.PI) % (2 * Math.PI), // 방향 반대로 계산
+                        }));
+
+                    // Reverse Path 생성
+                    const { data: newPath, error: pathError } = await supabase
+                        .from('Path')
+                        .insert({
+                            name: reversePathName,
+                            robotId: robotDbId,
+                            description: "Automatically generated reverse path",
+                            color: "blue", // 필요 시 색상 지정
+                            type: 0 // Path 타입 지정
+                        })
+                        .select();
+
+                    if (pathError || !newPath) {
+                        console.error('Reverse Path 생성 오류:', pathError);
+                        return;
+                    }
+
+                    newPathId = newPath[0].id;
+
+                    // Reverse Waypoints를 새로운 Path에 추가
+                    const waypointInsertions = reversedWaypoints.map(wp =>
+                        supabase.from('Waypoint').insert({
+                            pathId: newPathId,
+                            latitude: wp.latitude,
+                            longitude: wp.longitude,
+                            yaw: wp.yaw,
+                            name: wp.name,
+                            type: wp.type,
+                            color: wp.color || "blue" // 필요 시 색상 지정
+                        })
+                    );
+
+                    // 모든 Waypoint 삽입 Promise 처리
+                    const waypointResults = await Promise.all(waypointInsertions);
+
+                    // Waypoint 삽입 오류 확인
+                    const waypointErrors = waypointResults.filter(result => result.error);
+                    if (waypointErrors.length > 0) {
+                        console.error("Reverse Waypoint 삽입 중 오류 발생:", waypointErrors);
+                        return;
+                    }
+
+                    console.log("Reverse Path와 Waypoints가 성공적으로 생성되었습니다.");
+
+                    // Reverse Path에 대한 WebSocket 명령 생성
+                    const pathData = {
+                        command: "path",
+                        connection_id: connectionId,
+                        robot_id: selectedRobotId,
+                        path_id: newPathId,
+                        waypoint_id: -1, // 모든 Waypoint를 주행
+                        type: commandType,
+                        request_id: requestId,
+                    };
+
+                    console.log("전송할 Reverse Path WebSocket 데이터:", JSON.stringify(pathData, null, 2));
+                    socket.send(JSON.stringify(pathData));
+
                 }
 
-                // Reverse Waypoints 처리
-                const reversedWaypoints = waypoints.reverse().map(wp => ({
-                    ...wp,
-                    yaw: (wp.yaw + Math.PI) % (2 * Math.PI), // 방향 반대로 계산
-                }));
-
-                // Reverse Path 생성
-                const { data: newPath, error: pathError } = await supabase
-                    .from('Path')
-                    .insert({
-                        name: reversePathName,
-                        robotId: robotDbId,
-                        description: "Automatically generated reverse path",
-                        color: "blue", // 필요 시 색상 지정
-                        type: 0 // Path 타입 지정
-                    })
-                    .select();
-
-                if (pathError || !newPath) {
-                    console.error('Reverse Path 생성 오류:', pathError);
-                    return;
-                }
-
-                const newPathId = newPath[0].id;
-
-                // Reverse Waypoints를 새로운 Path에 추가
-                const waypointInsertions = reversedWaypoints.map(wp =>
-                    supabase.from('Waypoint').insert({
-                        pathId: newPathId,
-                        latitude: wp.latitude,
-                        longitude: wp.longitude,
-                        yaw: wp.yaw,
-                        name: wp.name,
-                        type: wp.type,
-                        color: wp.color || "blue" // 필요 시 색상 지정
-                    })
-                );
-
-                // 모든 Waypoint 삽입 Promise 처리
-                const waypointResults = await Promise.all(waypointInsertions);
-
-                // Waypoint 삽입 오류 확인
-                const waypointErrors = waypointResults.filter(result => result.error);
-                if (waypointErrors.length > 0) {
-                    console.error("Reverse Waypoint 삽입 중 오류 발생:", waypointErrors);
-                    return;
-                }
-
-                console.log("Reverse Path와 Waypoints가 성공적으로 생성되었습니다.");
-
-                // Reverse Path에 대한 WebSocket 명령 생성
-                const pathData = {
-                    command: "path",
-                    connection_id: connectionId,
-                    robot_id: selectedRobotId,
-                    path_id: newPathId,
-                    waypoint_id: -1, // 모든 Waypoint를 주행
-                    type: commandType,
-                    request_id: requestId,
-                };
-
-                console.log("전송할 Reverse Path WebSocket 데이터:", JSON.stringify(pathData, null, 2));
-                socket.send(JSON.stringify(pathData));
+                
             } catch (error) {
                 console.error("Reverse Path 처리 중 예기치 않은 오류 발생:", error);
             }
