--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -4426,7 +4426,7 @@ ${waypointsYamlStr}
                             command: "path",
                             connection_id: connectionId,
                             robot_id: selectedRobotId,
-                            path_id: newpathId,
+                            path_id: newPathId,
                             waypoint_id: -1,
                             type: commandType,
                             request_id: requestId, // request_id 추가
