--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1513,6 +1513,7 @@
             pointCounter = 1;
             waypoint_lines = [];
             selectMode = false;
+            selectedPathId = null;
 
             // 표 정보 초기화
             document.getElementById('waypointBody').innerHTML = ``;
