--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -944,7 +944,7 @@
         <button onclick="openDBRobotPopup()"> DB Waypoint List </button>
         <button id="startNavigationBtn" onclick="sendAllWaypoints(selectedPathId)">Start Navigation</button>
         <button id="reverseNavigationBtn" onclick="sendAllWaypoints(selectedPathId,reverse=true)">Reverse Waypoint</button>
-        <button id="cancleBtn" onclick="sendAllWaypoints(selectedPathId,commandType=-1)"style="background-color: #dc3545; color: white;">Cancel</button>
+        <button id="cancelBtn" onclick="sendAllWaypoints(selectedPathId,commandType=-1)"style="background-color: #dc3545; color: white;">Navigation Cancel</button>
     </div>
 
     <!-- Path 목록을 표시하는 팝업 -->
