--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -4221,6 +4221,7 @@
 
         // DB에서 모든 Waypoint를 불러와 한 번에 전송하는 함수
         async function sendAllWaypoints(pathId,commandType = 0, reverse = false) {
+            console.log("reverse status: ", reverse);
             if (!socket || socket.readyState !== WebSocket.OPEN) {
                 console.error("WebSocket 연결이 열려 있지 않습니다. 연결을 재설정합니다.");
                 alert("WebSocket 연결이 닫혀 있습니다. 다시 시도해 주세요.");
