--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -982,9 +982,26 @@
 
 
 
-    <script type="module">
+    <script>
+
+        const wheelCommands = {
+            stop: [{ label: 'Stop', command: 'Stop', value: 0.0 }],
+            forward: [
+                { label: 'Forward 1m', command: 'MoveDelta', value: 1.0 },
+                { label: 'Forward 2m', command: 'MoveDelta', value: 2.0 },
+            ],
+            backward: [
+                { label: 'Backward 1m', command: 'MoveDelta', value: -1.0 },
+                { label: 'Backward 2m', command: 'MoveDelta', value: -2.0 },
+            ],
+            left: [
+                { label: 'Left 90°', command: 'TurnDelta', value: 1.5708 },
+            ],
+            right: [
+                { label: 'Right 90°', command: 'TurnDelta', value: -1.5708 },
+            ],
+        };
         
-        import { wheelCommands } from './wheelCommands.js';
 
         let socket; // WebSocket 객체
         
@@ -3914,6 +3931,11 @@
          // DB Robot 팝업 열기 및 데이터 조회 함수
          async function openDBRobotPopup() {
             await fetchRobotList(); // 로봇 목록 조회 후 팝업 열기
+        }
+
+        // DB Robot 팝업 닫기 함수
+        function closeDBRobotPopup() {
+            document.getElementById("dbRobotPopup").style.display = "none"; // 팝업 숨기기
         }
 
         // 첫 번째 팝업에서 로봇 목록을 클릭하면 Path 목록을 표시하는 팝업을 띄움
