--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -813,7 +813,7 @@
     <!-- 사용자가 로봇을 추가 및 제어할 수 있는 버튼 -->
     <div id="robot-control">
         <label>[Robot Control] </label>
-        <button onclick="openRobotListPopup()">Open Robot List</button>
+        <button onclick="openRobotListPopup()">Add Robot</button>
         <!-- 선택된 로봇을 표시할 드롭다운 -->
         <select id="selectedRobotDropdown" onchange="handleRobotSelectionChange()" >
             <option value="">Selected a Robot</option>
