--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -781,30 +781,30 @@
     <!-- 지도가 표시될 영역 -->
     <div id="map">
         <!-- 사이드바(오른쪽) 열기/닫기 버튼 -->
-        <div class="toggle-sidebar-right-btn" onclick="toggleSidebarRight()">Info</div>
+        <!-- <div class="toggle-sidebar-right-btn" onclick="toggleSidebarRight()">Info</div> -->
 
         <!-- 사이드바(오른쪽) (로봇 정보 팝업 저장) -->
-        <div id="sidebar-right" class="sidebar-right">
-            <h3 style="font-size: 2vh;">Robot Information</h3>
+        <!-- <div id="sidebar-right" class="sidebar-right">
+            <h3 style="font-size: 2vh;">Robot Information</h3> -->
             <!-- 로봇 정보 팝업이 추가될 영역 -->
-            <div id="robotInfoContainer"></div>
-        </div>
+            <!-- <div id="robotInfoContainer"></div>
+        </div> -->
 
         <!-- 사이드바(왼쪽) 열기/닫기 버튼 -->
-        <div class="toggle-sidebar-left-btn" onclick="toggleSidebarLeft()">Deadlock</div>
+        <!-- <div class="toggle-sidebar-left-btn" onclick="toggleSidebarLeft()">Deadlock</div> -->
 
         <!-- 사이드바(왼쪽) (로봇 교착 확률 행렬) -->
-        <div id="sidebar-left" class="sidebar-left">
+        <!-- <div id="sidebar-left" class="sidebar-left">
             <div class="header-container">
                 <h3 class="header-title">Deadlock Probability</h3>
                 <div class="zoom-buttons">
                     <button onclick="zoomIn()">+</button>
                     <button onclick="zoomOut()">-</button>
                 </div>
-            </div>
+            </div> -->
             <!-- 행렬을 감싸는 Wrapper 추가 -->
-            <div id="matrixContainerWrapper">
-                <div id="probabilityMatrix">
+            <!-- <div id="matrixContainerWrapper">
+                <div id="probabilityMatrix"> -->
                     <!-- 교착 확률 행렬이 동적으로 추가 -->
                 </div>
             </div>
