--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -3209,7 +3209,7 @@
                 marker.bindPopup(`<strong>Robot:</strong> ${robotname}`).openPopup();
 
                 // 마커를 robotMarkers에 저장
-                robotMarkers[robotId] = marker;
+                robotMarkers[robotname] = marker;
             }
 
             // 다른 로봇의 마커는 제거
