--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -3188,7 +3188,7 @@
                 switch (robotname.toLowerCase()) {
                     case 'yellow': return 'yellow';
                     case 'tank orange': return 'orange';
-                    case 'blue': return 'skyblue';
+                    case 'blue': return 'lightblue';
                     case 'tank purple': return 'purple';
                     case 'pink': return 'pink';
                     default: return 'green'; // 기본 색상
