--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -3205,7 +3205,7 @@
                 
                 
                 return L.divIcon({
-                    html: `<div class="transform" style="color: ${color}; font-size: 24px; transform: rotate(${adjustedHeading}deg;">➤</div>`,
+                    html: `<div class="transform" style="color: ${color}; font-size: 24px; transform: rotate(${adjustedHeading}deg);">➤</div>`,
                     className: 'arrow-icon',
                     iconSize: [15, 15], // 아이콘 크기
                 });
